log
Sun 08 Oct 2023 12:58:30 AM UTC: 
 tests:  0|5
total_score: 0/70
84f5af6
Mon 09 Oct 2023 01:18:10 AM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
46c88d7
Mon 09 Oct 2023 01:19:12 AM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:77:18: error: implicit declaration of function ‘createLit’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
   77 |     List* list = createLit();
      |                  ^~~~~~~~~
      |                  createList
sudoku.c:77:18: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:85:32: error: implicit declaration of function ‘addNode’ [-Werror=implicit-function-declaration]
   85 |                         list = addNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                                ^~~~~~~
sudoku.c:85:30: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   85 |                         list = addNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
d206ddf
Mon 09 Oct 2023 01:19:23 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:77:18: error: implicit declaration of function ‘createLit’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
   77 |     List* list = createLit();
      |                  ^~~~~~~~~
      |                  createList
sudoku.c:77:18: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:85:32: error: implicit declaration of function ‘adNode’ [-Werror=implicit-function-declaration]
   85 |                         list = adNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                                ^~~~~~
sudoku.c:85:30: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   85 |                         list = adNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
12aa296
Mon 09 Oct 2023 01:19:34 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:77:18: error: implicit declaration of function ‘creaeLit’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
   77 |     List* list = creaeLit();
      |                  ^~~~~~~~
      |                  createList
sudoku.c:77:18: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:85:32: error: implicit declaration of function ‘adNode’ [-Werror=implicit-function-declaration]
   85 |                         list = adNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                                ^~~~~~
sudoku.c:85:30: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   85 |                         list = adNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
88cccf9
Mon 09 Oct 2023 01:19:53 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:85:32: error: implicit declaration of function ‘addNode’ [-Werror=implicit-function-declaration]
   85 |                         list = addNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                                ^~~~~~~
sudoku.c:85:30: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   85 |                         list = addNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
f446889
Mon 09 Oct 2023 01:20:31 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:85:32: error: implicit declaration of function ‘addNode’ [-Werror=implicit-function-declaration]
   85 |                         list = addNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                                ^~~~~~~
sudoku.c:85:30: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   85 |                         list = addNode(list, new_node);  // Asumiendo que addNode es una función para añadir un nodo a la lista
      |                              ^
In file included from test.c:5:
sudoku.c:87:24: error: ‘lis’ undeclared (first use in this function); did you mean ‘list’?
   87 |                 return lis;  // Retornamos la lista después de encontrar y llenar la primera casilla vacía
      |                        ^~~
      |                        list
sudoku.c:87:24: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
2a007c2
